--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="box"></div>   
         <div class="box"></div>   
         <div class="box"></div>
+        <div class="circle"></div>
     </div> 
 </body>
 </html>
